# FF-WebHID

./: .gitignore  .gitmodules  .versionrc.cargo-updater.cjs  .versionrc.cargo-updater.js  .versionrc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  package-lock.json  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-addon.yml  build.yml  check.yml  release.yml  sign-addon.yml  test.yml
.zed/: debug.json  settings.json  tasks.json
addon/: background.js  classes.js  hid-worker.js  logger.js  manifest.json  manifest.v2.json  manifest.v3.json  popup.css  popup.html  popup.js  settings.html  settings.js  wasm-parser.js  wasm-parser.wasm  webhid-bridge.js  webhid-modal.css  webhid-polyfill.js  webhid.css  webhid.js
addon/css/: device-picker.css  picker.css  popup.css  settings.css  shared.css  theme.css
addon/html/: device-picker.fragment.html  picker-popup.html  picker.fragment.html  picker.html  popup.html  settings.html  test.html
addon/js/: background.js  bootstrap-isolated.js  bootstrap-main.js  bridge.js  control.js  device-picker.js  inject-main.js  picker-popup.js  picker.js  polyfill.js  popup.js  settings.js  test-bridge.js  test.js  worker.js
addon/js/pages/: picker.js  popup.js  settings.js  test-bridge.js  test.js
addon/js/utils/: base64.js  bootstrap.js  browser-compat.js  device-utils.js  device.js  http-status.js  http.js  logger.js  report-descriptor-parser.js  report-descriptor-parser.wasm  resource.js  settings-defaults.js  settings-store.js  settings.js  websocket.js  ws-transport.js
crates/: .gitignore  Cargo.toml  deny.toml
crates/uhid-mock/: Cargo.toml  README.md
crates/uhid-mock/src/: main.rs  uhid.rs
crates/webhid/: Cargo.toml
crates/webhid-daemon/: Cargo.toml
crates/webhid-daemon/src/: client.rs  descriptor.rs  device_mgr.rs  hid.rs  hotplug.rs  main.rs  security.rs  udev_monitor.rs  websocket.rs
crates/webhid-descriptor-wasm/: Cargo.toml
crates/webhid-descriptor-wasm/src/: lib.rs
crates/webhid-native-messaging/: Cargo.toml
crates/webhid-native-messaging/src/: main.rs
crates/webhid/src/: lib.rs  logging.rs  protocol.rs  security.rs  types.rs
docs/: ARCHITECTURE.md  BENCHMARK.md  DATA_PATH.md  DEVELOPMENT.md  INSTALLATION.md
manifests/: 99-webhid.rules  install.sh  webhid-daemon-nm-host  webhid-daemon-nm-host.json  webhid-daemon.service  webhid-daemon.user.service  webhid-native-messaging-host.json  webhid.daemon_nm_host.chromium.json  webhid.daemon_nm_host.json  webhid.forwarder_nm_host.chromium.json  webhid.forwarder_nm_host.json  webhid_server.json  webhid_server.windows.json  webhid_server.windows.template.json
packaging/linux/archlinux/webhid/: PKGBUILD  webhid.install
packaging/linux/archlinux/webhid-addon/: PKGBUILD  webhid-addon.install
packaging/linux/debian/: build-deb.sh
packaging/linux/rpm/: build-rpm.sh  webhid.spec
packaging/macos/: webhid.rb
packaging/webhid/: PKGBUILD  webhid.install
packaging/webhid-addon/: PKGBUILD  webhid-addon.install
packaging/windows/: License.rtf  build-msi.ps1  webhid.wxs
scripts/: build-addon.sh  build-wasm.sh  gen-descriptors.py  install.sh
server/: .clangd  meson.build
server/include/: hid_device  hid_device_monitor
server/res/: webhidserver.json
server/src/: hid_device.cpp  hid_device_monitor.cpp  hid_device_monitor.linux.cpp  main.cpp
skills/agent-perf-analysis/: SKILL.md  _meta.json
skills/agent-perf-analysis/scripts/: perf_analysis.py
test/: index.html  test_daemon.py  test_nm.py
tests/e2e/: package-lock.json  package.json  playwright.config.ts  test-page.html  tsconfig.json
tests/e2e/helpers/: devices.ts  fixtures.ts  mock-bridge.ts  process.ts  serve.mjs  types.ts
tests/e2e/tests/: e2e.spec.ts  enumerate.spec.ts  handshake.spec.ts  input-report.spec.ts  open-close.spec.ts  send-report.spec.ts
