[package]
name = "uhid-mock"
version = "2.1.1"
edition = "2024"
license = "MIT"
description = "Virtual HID device mocker for FF-WebHID end-to-end tests (Linux only)"

[[bin]]
name = "uhid-mock"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
log = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
