[package]
name = "webhid-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
webhid = { path = "../webhid" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
udev = "0.8"
libc = "0.2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = "0.26"
futures = "0.3"
hex = "0.4"
rand = "0.10.1"
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }
