[package]
name = "webhid-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
webhid = { path = "../webhid" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio-tungstenite = "0.26"
futures = "0.3"
hex = "0.4"
rand = "0.10.1"
hidapi = { version = "2.6", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.8"
libc = "0.2"
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["macos-shared-device"] }
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["windows-native"] }
