[package]
name = "webhid-daemon"
version = "2.2.0"
edition = "2024"
license = "MIT"

[dependencies]
webhid = { path = "../webhid" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "io-util", "io-std", "time", "signal", "macros"] }
anyhow = { version = "1", default-features = false, features = ["std"] }
log = { version = "0.4", features = ["std"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
getrandom = "0.4"
subtle = "2"
sha2 = "0.10"
bytes = "1"
hidapi = { version = "2.6", default-features = false }
hidreport = { version = "0.6", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.8"
libc = "0.2"
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["macos-shared-device"] }
core-foundation-sys = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = { version = "2.6", default-features = false, features = ["windows-native"] }
