[package]
name = "webhid-native-messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
webhid = { path = "../webhid" }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "net", "io-util", "time", "macros", "io-std"] }
anyhow = { version = "1", default-features = false, features = ["std"] }
log = { version = "0.4", features = ["std"] }
