[package]
name = "webhid"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
bytes = "1.11.1"
rkyv = { version = "0.8", features = ["bytecheck"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
