[package]
name = "webhid"
version = "2.2.0"
edition = "2024"
license = "MIT"

[dependencies]
base64 = "0.22"
bytes = "1.11.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
